# ftb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: security.yml
examples/: demo.md
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/fixtures/expected/: complex.txt  document_with_tables.txt  irregular.txt  simple.txt  unicode_cjk.txt  unicode_emoji.txt  unicode_mixed.txt
tests/fixtures/input/: complex.txt  document_with_tables.txt  irregular.txt  unicode_cjk.txt  unicode_emoji.txt  unicode_mixed.txt
